# AVIM_QML_ViIME

./: CMakeLists.txt  Main.qml  README.md  VietTextArea.qml  VietTextInput.qml  main.cpp  simplified-avim.js
